Enable flexbox in the site head div and center justify elements

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .site-head {
+    display: flex;
     margin: auto;
     width: 50%;
+    justify-content: center;
+    align-content: center;
 }
 
 .site-logo {
