--- a/style.css
+++ b/style.css
@@ -3,10 +3,16 @@
     margin: auto;
     width: 50%;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .site-logo {
     width: 150px;
     height: auto;
+}
+
+.site-name {
+    font-family: "Viking", "Trajan Pro", "Sylfaen", sans-serif;
+    font-weight: 700;
 }
