Move font styling to general text class from site name
Font looks nice, choose to apply it to any significant text element
instead of just the site title.

--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
     height: auto;
 }
 
-.site-name {
+.text {
     font-family: "Viking", "Trajan Pro", "Sylfaen", sans-serif;
+}
+
+.site-name {
     font-weight: 700;
 }
