Horizontally center recipe links in home page
Plan to add recipe icons/images and have each recipe entry be
selectable for aesthetic purposes.

--- a/style.css
+++ b/style.css
@@ -24,3 +24,13 @@ body {
 .section-header{
     color: #3B2A2A;
 }
+
+.recipe-container {
+    display: flex;
+    justify-content: center;
+}
+
+.recipe-entry {
+    padding: 3%;
+    margin: 0 auto;
+}
