--- a/style.css
+++ b/style.css
@@ -34,3 +34,19 @@ body {
     padding: 3%;
     margin: 0 auto;
 }
+
+.recipe-image {
+    display: block;
+    width: 150px;
+    height: 200px;
+}
+
+.recipe-entry a {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 10px;
+    color: saddlebrown;
+    text-decoration: none;
+    font-size: xx-large;
+}
