Narrow the box of recipe page content
For aesthetic reasons. Put recipe content into a div. Add padding and
margins to make the recipe content more easily readable by eliminating
long horizontal lines of text.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@ body {
     font-weight: 700;
 }
 
+.site-content {
+    padding: 0% 10%;
+    margin: 2%;
+}
+
 .section-header{
     color: #3B2A2A;
 }
