--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     padding: 1%;
     margin: 0 auto;
     background-color: #d5f0c0;
+    transition: transform 0.3s ease-in-out;
 }
 
 .recipe-image {
@@ -60,4 +61,5 @@ body {
 
 .recipe-entry:hover {
     transform: scale(1.2);
+    transition: 0.3s;
 }
