--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .site-head {
     display: flex;
-    margin: auto;
+    margin: 1% auto;
     width: 50%;
     justify-content: center;
     align-items: center;
@@ -32,15 +32,17 @@ body {
 
 .recipe-container {
     display: flex;
+    width: 90%;
+    margin: 4% auto;
     justify-content: center;
-    margin-top: 4%;
 }
 
 .recipe-entry {
-    padding: 1%;
-    margin: 0 auto;
     background-color: #d5f0c0;
-    transition: transform 0.3s ease-in-out;
+    padding: 1%;
+    border-radius: 7%;
+    margin: 0 auto;
+    transition: 0.3s ease-in-out;
 }
 
 .recipe-image {
@@ -60,6 +62,11 @@ body {
 }
 
 .recipe-entry:hover {
+    background-color: #a9d7e9;
     transform: scale(1.2);
     transition: 0.3s;
+}
+
+.recipe-entry:hover a {
+    color: #be6400;
 }
