--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     width: 75%;
     margin: 4% auto;
     justify-content: center;
+    gap: 40px;
 }
 
 .recipe-entry {
@@ -43,6 +44,7 @@ body {
     border-radius: 7%;
     margin: 0 auto;
     transition: 0.3s ease-in-out;
+    flex: 0 1 auto;
 }
 
 .recipe-image {
